--- a/index.html
+++ b/index.html
@@ -121,35 +121,8 @@
 
     <div class="row">
       <div class="col-3">
-        <div class="astra-voyage-validator" id="microtick">
-          <img src="img/validators/microtick_logo.png" alt="microtick logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>VALIDATOR NAME</b></h4> 
-            <p>VALIDATOR SYMBOL</p> 
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="nomic">
-          <img src="img/validators/nomic_logo.png" alt="nomic logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>VALIDATOR NAME</b></h4> 
-            <p>VALIDATOR SYMBOL</p> 
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="osmosis">
-          <img src="img/validators/osmosis_logo.png" alt="osmosis logo"  class="astra-voyage-validator-logo">
-          <div class="container">
-            <h4><b>VALIDATOR NAME</b></h4> 
-            <p>VALIDATOR SYMBOL</p> 
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="astra-voyage-validator" id="sif chain">
-          <img src="img/validators/sif_chain_logo.png" alt="sif chain logo"  class="astra-voyage-validator-logo">
+        <div class="astra-voyage-validator" id="cheq">
+          <img src="img/validators/cheq_logo.png" alt="cheq logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
