--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/astra-style.css">
+    <link rel="ICON" href="img/favicon.ico" type="image/ico" />
   </head>
   <body>
 
