--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
           <img src="img/validators/akash_logo.png" alt="akash logo"  class="astra-voyage-validator-logo">
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
-            <p>VALIDATOR SYMBOL</p> 
+            <p>VALIDATOR SYMBOL</p>
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
