--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -77,6 +78,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -86,6 +88,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -98,6 +101,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -107,6 +111,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -116,6 +121,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -128,6 +134,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -137,6 +144,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -146,6 +154,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
@@ -155,6 +164,7 @@
           <div class="container">
             <h4><b>VALIDATOR NAME</b></h4> 
             <p>VALIDATOR SYMBOL</p> 
+            <button class="astra-voyage-validator-button">STAKE</button> 
           </div>
         </div>
       </div>
